--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 .App {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 .fixed-login-button {
@@ -68,6 +71,10 @@ nav {
     flex: 1;
     position: relative;
     overflow: visible;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    min-width: 0;
+    min-height: 0;
 }
