--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 .fixed-login-button {
     position: fixed;
     top: 30px;
-    right: 30px;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1000;
 }
 
